--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.2.0"
+    "react-router": "^5.1.2",
+    "react-scripts": "3.2.0",
+    "use-socket.io-client": "^1.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
